<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="chosenBrand"
            type="com.canlioya.core.models.Brand" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@drawable/rounded_background">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBrand_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:hint="@string/brand_name"
                style="@style/Widget.TrainInventory.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBrand_editBrandName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:text="@{chosenBrand.brandName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBrandWebsite_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:hint="@string/website_of_the_brand"
                style="@style/Widget.TrainInventory.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBrand_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBrand_editWeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:text="@{chosenBrand.webUrl}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addBrandLogoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:text="@{chosenBrand.brandLogoUri == null ? @string/add_logo : @string/change_logo}"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/addBrand_image"
                app:layout_constraintTop_toTopOf="@+id/addBrand_image" />

            <ImageView
                android:id="@+id/addBrand_image"
                android:layout_width="@dimen/add_brand_logo_dim"
                android:layout_height="@dimen/add_brand_logo_dim"
                android:layout_margin="@dimen/margin_standard"
                android:contentDescription="@string/cd_brand_logo_edit"
                app:imageUrl="@{chosenBrand.brandLogoUri}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addBrandLogoBtn"
                app:layout_constraintTop_toBottomOf="@+id/addBrandWebsite_layout"
                app:placeholder="@{@drawable/ic_gallery_light}"
                app:srcCompat="@drawable/ic_gallery_light"
                app:visible="@{chosenBrand.brandLogoUri != null}" />

            <Button
                android:id="@+id/addBrand_saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_save_brand"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/half_margin"
                android:text="@string/save"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBrandLogoBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>