...
        <action
            android:id="@+id/action_categoryListFragment_to_filterTrainFragment"
            app:destination="@id/filterTrainFragment" />
    </fragment>

    <fragment
        android:id="@+id/brandListFragment"
        android:name="com.canli.oya.traininventoryroom.ui.brands.BrandListFragment"
        android:label="@string/all_brands">
        <action
            android:id="@+id/action_brandListFragment_to_filterTrainFragment"
            app:destination="@id/filterTrainFragment" />
    </fragment>
...
            android:name="excelFileUri"
            app:argType="string" />
    </dialog>
    <fragment
        android:id="@+id/filterTrainFragment"
        android:name="com.canli.oya.traininventoryroom.ui.filter.FilterTrainFragment"
        android:label="@string/search_trains" >
        <argument
            android:name="intentRequestCode"
            app:argType="string"
            android:defaultValue="search"/>
        <argument
            android:name="categoryName"
...
