<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/avd_plus_to_cross"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/export_to_excel"
        android:title="@string/export_to_excel"
        app:showAsAction="never"/>
    <item android:id="@+id/trashFragment"
        android:title="@string/trash"
        app:showAsAction="never"/>
</menu>